--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <section id="home" data-module-id="screen">
             <img src="./img/playermade.png" class="playermade"/>
             <div class="blackbox">
-                <p>Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
+                <h1>Playermade</h1>
+                <p>is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
             </div>
         </section>
 
