--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         <section id="home" data-module-id="screen">
             <img src="./img/playermade.png" class="playermade"/>
             <div class="blackbox">
-                <h1>Playermade</h1>
-                <p>is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
+                <p class="blackbox-text">Playermade</p><p>is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
             </div>
         </section>
 
