--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="menu-item"><a href="#Become-Member" data-scroll>Become a Member</a></li>
                 <li class="menu-item"><a href="#Movement-Screen" data-scroll>Screen</a></li>
                 <li class="menu-item"><a href="#Specialist-Training" data-scroll>Train</a></li>
-                <li class="menu-item"><a href="#Train2" data-scroll>Train2</a></li>
+                <li class="menu-item"><a href="#Train2" data-scroll>Team Training</a></li>
                 <li class="menu-item"><a href="#Abstract" data-scroll>Abstract</a></li>
                 <li class="menu-item"><a href="#Testimonials" data-scroll>Testimonials</a></li>
                 <li class="menu-item"><a href="#Contact" data-scroll>Contact</a></li>
