--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         
                <section id="Testimonials">
             <div class="slideshow-container">
-                <h1>Members Say</h1>
+                <h1>Members Say:</h1>
                 <div class="mySlides">
                   <q>My daughter is definitely stronger, more confident and fitter since joining Playermade, but most off all she enjoys going and always has a smile on her face after every session.</q>
                   <br/>
