--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="border-box">
                     <h1>SCREEN</h1>
                     <hr />
-                    <p>A physical assessment that helps Identify your strengths and weakness. Identify a training group to suit your current level of ability</p>
+                    <p>A physical assessment to identify your strengths and weakness. Identify a training group to suit your current level of ability.</p>
                     <div class="vl"></div>
                 </div>
                 <div class="border-box">
@@ -53,7 +53,7 @@
                 <div class="border-box">
                     <h1>GAME</h1>
                     <hr/>
-                    <p>Transfer the skills that you have developed throught training into your game, more speed, more strength and better agility</p>
+                    <p>Transfer the skills that you have developed throught training into your game, more speed, more strength and better agility.</p>
                 </div>
             </div>
         </section>
