--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="border-box">
                     <h1>SCREEN</h1>
                     <hr />
-                    <p>A physical assessment to identify your strengths and weakness. Identify a training group to suit your current level of ability.</p>
+                    <p>A physical assessment to identify your strengths and weakness. Establish a training group that suits your current level of ability.</p>
                     <div class="vl"></div>
                 </div>
                 <div class="border-box">
