--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section id="home" data-module-id="screen">
             <img src="./img/playermade.png" class="playermade"/>
             <div class="blackbox">
-                <p class="blackbox-text">Playermade</p><p class="blackbox-text2">is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
+                <p class="blackbox-text2">Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
             </div>
         </section>
 
