--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h1>TRAIN</h1>
                     <hr/>
                     <p>Choose a training method to increase all aspects of your performance. Join a group or 1:1 coaching.</p>
-                    <div class="vl2"></div>
+                    <div class="vl"></div>
                 </div>
                 <div class="border-box">
                     <h1>GAME</h1>
