--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
 
         <section id="home" data-module-id="screen">
-            <img src="./img/playermade.png" class="playermade"/>
+            <img src="./img/playermade1.png" class="playermade"/>
             <div class="blackbox">
                 <p class="blackbox-text2">Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
             </div>
