--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </section>
 
         <section id="Movement-Screen">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <div class="screenbox">
                     <hr />
                     <h2>Movement Screen</h2>
@@ -90,6 +91,7 @@
         </section>
         
         <section id="Train2">
+            <img typeof="foaf:Image" class="img-responsive2" src="https://www.playermade.co.uk/img/home.jpg" width="501" height="600" alt="">
             <div class="screenbox">
                     <hr>
                     <h2>Team Training</h2>
