added new text + button and image fix

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h2>Movement Screen</h2>
                     <p>Once we know more about you as a player we can share our findings with any attending adult(s). Highlighting the quality and capacity of your movement, as well as any recommendations for your TRAIN options.</p>
                     <a href="https://user.playermade.co.uk/signup?productid=19">
-                        <button type="button" class="btn btn-success btn-lg">BUY NOW</button>
+                        <button type="button" class="btn btn-success btn-lg">BOOK</button>
                     </a>
             </div>
         </section>
@@ -95,13 +95,20 @@
             <div class="screenbox">
                     <hr>
                     <h2>Team Training</h2>
-                    <p>Complement your sports specific team training with this performance based training. Experience a professional standard of training that is worthy of any major sports clubs from around the world. 
-                        Perfect for in-season or preseason, use your sessions to get fit for the start of the season, or focus on one or more aspects of performance, such as strength, speed, agility or power.</p>
-            </div>
+                    <p>Complement your team training with something different and exciting. Experience a professional standard of training that is worthy of any major sports team. Perfect for both pre-season and in-season.
+                        Tailor your session to target specific aspects of training, including strength, speed, agility, power and overall fitness.
+                    </p>
+                    <p>
+                        Complete this short enquiry to discuss your training with one of our trainers.
+                    </p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdX1Zs5-LLiaghxiNN5TxIM_GvOYzwjcY4pChepYL00EYxt0A/viewform">
+                        <button type="button" class="btn btn-success">ENQUIRE</button>
+                    </a>
+             </div>
         </section>
 
         <section id="Abstract">
-            <div class="screenbox3">
+            <div class="Abstract-text">
                  <h1>Abstract</h1>
                  <p>Competitive sports require players to be able to perform technical, tactical, and physical skills in order to be successful.</p>
                  <p>Sports training focuses highly on the techniques and tactics associated with sport, very often at the expense of more athlete centred training.</p>
@@ -160,9 +167,11 @@
                 <p>Mobile: 07958 264674</p>
             </div>
             <hr />
+            <div class="maps">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2422.4957390967716!2d-1.1213161846456399!3d52.614885036946035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48776133a88e00b5%3A0xf97700213bbe7274!2sPlayermade!5e0!3m2!1sen!2suk!4v1579976390244!5m2!1sen!2suk"
-            width="100%" frameborder="0" style="border:0;" allowfullscreen="">
+                width="100%" frameborder="0" style="border:0;" allowfullscreen="">
             </iframe>
+        </div>
         </section>
 
     </main>
