tidy naming of classes and seperate paragraph

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
         <section id="home" data-module-id="screen">
             <img src="./img/playermade1.png" class="playermade"/>
-            <div class="blackbox">
-                <p class="blackbox-text2">Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
+            <div class="Home">
+                <p class="Home-text">Playermade is an exclusive training club that specializes in the delivery of sports related training specific to juniors</p>
             </div>
         </section>
 
@@ -95,9 +95,8 @@
             <div class="screenbox">
                     <hr>
                     <h2>Team Training</h2>
-                    <p>Complement your team training with something different and exciting. Experience a professional standard of training that is worthy of any major sports team. Perfect for both pre-season and in-season.
-                        Tailor your session to target specific aspects of training, including strength, speed, agility, power and overall fitness.
-                    </p>
+                    <p>Complement your team training with something different and exciting. Experience a professional standard of training that is worthy of any major sports team.</p>
+                    <p> Perfect for both pre-season and in-season. Tailor your session to target specific aspects of training, including strength, speed, agility, power and overall fitness.</p>
                     <p>
                         Complete this short enquiry to discuss your training with one of our trainers.
                     </p>
