--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
             <div class="screenbox">
                     <hr />
                     <h2>Movement Screen</h2>
-                    <p>Once we know more about you as a player we can share our findings with any attending adult(s). Highlighting the quality and capacity of your movement, as well as any recommendations for your TRAIN options.</p>
+                    <p>Start the process of training by booking your SCREEN today.</p>
+                    <p>Once we know more about you as a player we can plan the next steps of your training.</p>
+                    <p>Following the screening you and any attending adults will be provided with instant feedback regarding the quality and capacity of your movement.
+                        We will also use this opportunity to discuss our recommendations for your TRAIN options.
+                    </p>
+                    <p>Following completion of your booking you will be contacted by one of our advisors who can then get you booked in at your convenience.</p>
                     <a href="https://user.playermade.co.uk/signup?productid=19">
                         <button type="button" class="btn btn-success btn-lg">BOOK</button>
                     </a>
