--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p>Following the screening you and any attending adults will be provided with instant feedback regarding the quality and capacity of your movement.
                         We will also use this opportunity to discuss our recommendations for your TRAIN options.
                     </p>
-                    <p>Following completion of your booking you will be contacted by one of our advisors who can then get you booked in at your convenience.</p>
+                    <p>Following receipt of payment you will be contacted by an advisors who can get you booked in.</p>
                     <a href="https://user.playermade.co.uk/signup?productid=19">
                         <button type="button" class="btn btn-success btn-lg">BOOK</button>
                     </a>
