--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <h1>SCREEN</h1>
                     <hr />
                     <p>A physical assessment to identify your strengths and weakness. Establish a training group that suits your current level of ability.</p>
-                    <div class="vl"></div>
+                    <div class="vl1"></div>
                 </div>
                 <div class="border-box">
                     <h1>TRAIN</h1>
