--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
                  <p>Competitive sports require players to be able to perform technical, tactical, and physical skills in order to be successful.</p>
                  <p>Sports training focuses highly on the techniques and tactics associated with sport, very often at the expense of more athlete centred training.</p>
                  <p>To be successful in sport not only requires those sports specific skills, but also those physical resources that contribute towards efficient movement.</p>
-                 <p>Our strategy focuses on combining the most relevant and purposeful stages of sports specific training and strength & conditioning.</p>
-                 <p>Our training aims to maximise performance and unlock the true potential of junior athletes. (Playermade classify junior’s as those who are under the age of 18).</p>
+                 <p>Our strategy focuses on combining the most relevant and purposeful stages of sports specific training and strength & conditioning. </p>
+                 <p>Our training aims to maximise performance and unlock the true potential of junior athletes.</p>
                  <p>All training is based upon scientific approaches and research surrounding the athletic development of junior athletes in sport.</p>
-                 <p>Attendance at Playermade will see players increase their athletic ability and capabilities in all areas relevant to their game.</p>
-                 <p>With a wealth of experience and broad understanding of not only junior specific coaching but coaching in general, Playermade has seen through its doors premier league football players as well as the World cup winning Australian Women’s Cricket Team. </p>
+                 <p>Attendance at Playermade will see players increase their athletic ability and capabilities in all areas relevant to their sport.</p>
+                 <p>With a wealth of experience and broad understanding of not only junior specific coaching but coaching in general, Playermade has seen through its doors premier league football players as well as the World cup winning Australian Women’s Cricket Team.</p>
             </div>
         </section>
         
