images and media query for more than 1000pc

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
 
         <section id="Movement-Screen">
-            <img typeof="foaf:Image" class="img-responsive2" src="./img/image1.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="./img/Movement.jpg" width="501" height="600" alt="">
             <div class="screenbox">
                     <hr />
                     <h2>Movement Screen</h2>
@@ -95,7 +95,7 @@
         </section>
         
         <section id="Train2">
-            <img typeof="foaf:Image" class="img-responsive2" src="./img/image1.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive2" src="./img/Team.jpg" width="501" height="600" alt="">
             <div class="screenbox">
                     <hr>
                     <h2>Team Training</h2>
