Added vimeo video

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="border-box">
                     <h1>Performance Testing</h1>
                     <hr/>
-                    <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
+                    <iframe src="https://player.vimeo.com/video/393759579" width="640" height="1138" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
