--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="border-box">
                     <h1>Performance Testing</h1>
                     <hr/>
-                    <iframe src="https://player.vimeo.com/video/393759579" width="100%" height="1138" frameborder="0" allow="autoplay;></iframe>
+                    <iframe src="https://player.vimeo.com/video/393759579" width="100%" frameborder="0" allow="autoplay;></iframe>
                 </div>
             </div>
         </section>
