--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="border-box">
                     <h1>Performance Testing</h1>
                     <hr/>
-                    <iframe src="https://player.vimeo.com/video/393765582" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    <iframe src="https://player.vimeo.com/video/393765582" width="100%" height="100%" frameborder="0" allow="autoplay; "fullscreen" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
