--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                 <div class="border-box">
                     <h1>Group Training</h1>
                     <hr />
-                    <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
+                    <iframe src="https://player.vimeo.com/video/393765582" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
                 <div class="border-box">
                     <h1>1:1 Training</h1>
                     <hr/>
-                    <video controls="controls" width="100%" name="Video" src="./img/Player Made 1.mp4"></video>
+                    <iframe src="https://player.vimeo.com/video/393765582" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
                 <div class="border-box">
                     <h1>Performance Testing</h1>
