--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
 
         <section id="Movement-Screen">
-            <img typeof="foaf:Image" class="img-responsive2" src="./img/Movement.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive" src="./img/Movement.jpg" width="501" height="600" alt="">
             <div class="screenbox">
                     <hr />
                     <h2>Movement Screen</h2>
@@ -74,20 +74,20 @@
         </section>
 
         <section id="Specialist-Training">
-            <div class="Member-text2">
+            <div class="Specialist-text">
                 <div class="border-box">
                     <h1>Group Training</h1>
-                    <hr />
+                    <hr class="line"/>
                     <iframe src="https://player.vimeo.com/video/393957087" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
                 <div class="border-box">
                     <h1>1:1 Training</h1>
-                    <hr/>
+                    <hr class="line"/>
                     <iframe src="https://player.vimeo.com/video/393959811" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
                 <div class="border-box">
                     <h1>Performance Testing</h1>
-                    <hr/>
+                    <hr class="line"/>
                     <iframe src="https://player.vimeo.com/video/393954799" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
             </div>
@@ -124,7 +124,7 @@
         </section>
         
         <section id="Testimonials">
-            <div class="Member-text">
+            <div class="Testimonial-text">
                 <h1>Members Say:</h1>
                 <iframe src="https://player.vimeo.com/video/393960639" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
