--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </section>
         
         <section id="Train2">
-            <img typeof="foaf:Image" class="img-responsive2" src="./img/Team.jpg" width="501" height="600" alt="">
+            <img typeof="foaf:Image" class="img-responsive" src="./img/Team.jpg" width="501" height="600" alt="">
             <div class="screenbox">
                     <hr>
                     <h2>Team Training</h2>
