--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
                 <h2 class="social-title"> Visit Our Socials</h2>
                 <div class="social-row">
                     <a target="_blank" href="https://www.facebook.com/playermadeuk/">
-                <img typeof="foaf:Image" class="img-responsive" src="./img/facebook.png" width="13" height="23" alt="">
+                <img typeof="foaf:Image" src="./img/facebook.png" width="13" height="23" alt="">
                     </a>  
                 </div>
                 
                 <div class="social-row">
                     <a target="_blank" href="https://www.instagram.com/playermadeuk/">
-                <img typeof="foaf:Image" class="img-responsive" src="./img/instagram.png" width="24" height="23" alt="">
+                <img typeof="foaf:Image" src="./img/instagram.png" width="24" height="23" alt="">
                     </a>  
                 </div>
             </div>
