flex to left and right

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
 
         <section id="Become-Member">
-            <div class="Member-text">
+            <div class="Member-text flex">
                 <div class="border-box">
                     <h1>SCREEN</h1>
                     <hr />
@@ -74,7 +74,7 @@
         </section>
 
         <section id="Specialist-Training">
-            <div class="Specialist-text">
+            <div class="Specialist-text flex">
                 <div class="border-box">
                     <h1>Group Training</h1>
                     <hr class="line"/>
