--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="nav-collapse">
             <ul>
                 <li class="menu-item active"><a href="#home" data-scroll>Home</a></li>
-                <li class="menu-item"><a href="#Become-Member" data-scroll>Become a Member</a></li>
+                <li class="menu-item"><a href="#Become-Member" data-scroll>Route</a></li>
                 <li class="menu-item"><a href="#Movement-Screen" data-scroll>Screen</a></li>
                 <li class="menu-item"><a href="#Specialist-Training" data-scroll>Train</a></li>
                 <li class="menu-item"><a href="#Train2" data-scroll>Team Training</a></li>
@@ -59,6 +59,7 @@
 
         <section id="Movement-Screen">
             <img typeof="foaf:Image" class="img-responsive" src="./img/Movement.jpg" width="501" height="600" alt="">
+            <div class="black"></div>
             <div class="screenbox">
                     <hr />
                     <h2>Movement Screen</h2>
@@ -78,23 +79,30 @@
                 <div class="border-box">
                     <h1>Group Training</h1>
                     <hr class="line"/>
-                    <iframe src="https://player.vimeo.com/video/393957087" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    <div class="vid">
+                        <iframe class="responsive-iframe" src="https://player.vimeo.com/video/393957087" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="border-box">
                     <h1>1:1 Training</h1>
                     <hr class="line"/>
-                    <iframe src="https://player.vimeo.com/video/393959811" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    <div class="vid">
+                        <iframe class="responsive-iframe" src="https://player.vimeo.com/video/393959811" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="border-box">
                     <h1>Performance Testing</h1>
                     <hr class="line"/>
-                    <iframe src="https://player.vimeo.com/video/393954799" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    <div class="vid">
+                        <iframe class="responsive-iframe" src="https://player.vimeo.com/video/393954799" width="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </section>
         
         <section id="Train2">
             <img typeof="foaf:Image" class="img-responsive" src="./img/Team.jpg" width="501" height="600" alt="">
+            <div class="black"></div>
             <div class="screenbox">
                     <hr>
                     <h2>Team Training</h2>
@@ -111,7 +119,7 @@
 
         <section id="Abstract">
             <div class="Abstract-text">
-                 <h1>Abstract</h1>
+                 <!-- <h1>Abstract</h1> -->
                  <p>Competitive sports require players to be able to perform technical, tactical, and physical skills in order to be successful.</p>
                  <p>Sports training focuses highly on the techniques and tactics associated with sport, very often at the expense of more athlete centred training.</p>
                  <p>To be successful in sport not only requires those sports specific skills, but also those physical resources that contribute towards efficient movement.</p>
